--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,9 +34,9 @@
     <script src="f/polyfill/polyfill.debug.js?4BC1"></script>
     <script src="f/polyfill/scrollIntoViewIfNeeded.debug.js?25A3"></script>
     <script src="f/polyfill/Element.prototype.dataset.debug.js?2E6B"></script>
-    <script src="f/jquery/jquery-3.3.1.debug.js?6A07"></script>
+    <script src="f/jquery/jquery.debug.js?23C7"></script>
 
-    <script src="f/kisp/kisp.babel.debug.js?007A"></script>
+    <script src="f/kisp/definejs.babel.debug.js?9D58"></script>
 
     <script src="config.js?1C0C"></script>
 
