--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -5,7 +5,7 @@
     <title>Welcome to webpart</title>
     <meta charset="utf-8" />
 
-    <!--master.less.begin-->
+    <!--webpart.less.begin-->
     <script>
         [
             'style/less/global.less',
@@ -14,7 +14,7 @@
             'views/**/*.less',
         ]
     </script>
-    <!--master.less.end-->
+    <!--webpart.less.end-->
 
 
 </head>
@@ -31,24 +31,24 @@
     </div>
 
 
-    <!--master.html.begin-->
+    <!--webpart.html.begin-->
     <script>
         [
             'lib/**/panel.html',
         ]
     </script>
-    <!--master.html.end-->
+    <!--webpart.html.end-->
 
     <script src="f/polyfill/polyfill.debug.js" data-meta="mode=compat; babel=no;"></script>
     <script src="f/polyfill/scrollIntoViewIfNeeded.debug.js" data-meta="mode=compat; babel=no;"></script>
     <script src="f/polyfill/Element.prototype.dataset.debug.js" data-meta="mode=compat; babel=no;"></script>
-    <script src="f/jquery/jquery-3.3.1.debug.js" data-meta="babel=no;"></script>
-    <script src="f/kisp/kisp.debug.js" data-meta="mode=normal;"></script>
-    <script src="f/kisp/kisp.babel.debug.js" data-meta="mode=compat; babel=no;"></script>
+    <script src="f/jquery/jquery.debug.js" data-meta="babel=no;"></script>
+    <script src="f/definejs/definejs.debug.js" data-meta="mode=normal;"></script>
+    <script src="f/definejs/definejs.babel.debug.js" data-meta="mode=compat; babel=no;"></script>
 
     <script src="config.js" data-meta="babel=no;"></script>
 
-    <!--master.js.begin-->
+    <!--webpart.js.begin-->
     <script>
         [
             'data/**/*.js',
@@ -58,9 +58,8 @@
             'routers/**/*.js',
             'index.js',
         ]
-
     </script>
-    <!--master.js.end-->
+    <!--webpart.js.end-->
 
 
 </body>
