--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Welcome to webpart</title>
+    <title>Welcome to Webpart</title>
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="style/css/style.less.global.css?D41D" />
@@ -31,17 +31,17 @@
 
 
 
-    <script src="f/polyfill/polyfill.debug.js?4BC1"></script>
-    <script src="f/polyfill/scrollIntoViewIfNeeded.debug.js?25A3"></script>
-    <script src="f/polyfill/Element.prototype.dataset.debug.js?2E6B"></script>
-    <script src="f/jquery/jquery.debug.js?23C7"></script>
 
-    <script src="f/kisp/definejs.babel.debug.js?9D58"></script>
+
+
+    <script src="f/jquery/jquery.debug.js?23C7"></script>
+    <script src="f/definejs/definejs.debug.js?F48E"></script>
+
 
     <script src="config.js?1C0C"></script>
 
-    <script src="babel/modules/loading/Loading.js?20A9"></script>
-    <script src="babel/index.js?5B7E"></script>
+    <script src="modules/loading/Loading.js?20A9"></script>
+    <script src="index.js?5B7E"></script>
 
 
 </body>
