--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Welcome to webpart</title>
+    <title>Welcome to Webpart</title>
     <meta charset="utf-8" />
 
     <!--webpart.less.begin-->
